fsd inforced, first widgets done

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,10 @@
     // node or classic
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    // 
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/*"]
+    },
     "esModuleInterop": true
   },
   "ts-node": {
