main yml upd push branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
 name: testing
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: 
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request: 
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
   pipeline:
