--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         run: npm run build:prod
       - name: unit testing...
         run: npm run test:unit
-      - name: build storybook...
-        run: npm run storybook:build
+      # - name: build storybook...
+      #   run: npm run storybook:build
       - name: screenshot test...
         run: npm run test:ui:ci
 
