--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test:ui:ok":"npx loki approve",
 
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook",
-    "test:ui:ci":"build-storybook && loki --requireReference --reactUri file:./storybook-static"
+    "storybook:build": "storybook build -c ./config/storybook",
+    "test:ui:ci":"storybook build && loki --requireReference --reactUri file:./storybook-static"
   },
   "keywords": [],
   "author": "",
