--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook",
-    "test:ui:ci":"storybook build && loki --requireReference --reactUri file:./storybook-static"
+    "test:ui:ci":"loki --requireReference --reactUri file:./storybook-static"
   },
   "keywords": [],
   "author": "",
