--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook",
+    "loki:upd": "loki update --reactUri file:./storybook-static",
     "test:ui:ci":"loki --requireReference --reactUri file:./storybook-static"
   },
   "keywords": [],
