--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:ui:ok":"npx loki approve",
 
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "storybook:build": "storybook build -c ./config/storybook",
+    "sb:build": "storybook build -c ./config/storybook",
     "loki:upd": "loki update --reactUri file:./storybook-static",
     "test:ui:ci":"loki --requireReference --reactUri file:./storybook-static"
   },
