--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
         run: npm run build:prod
       - name: unit testing...
         run: npm run test:unit
+      - name: storybook build...
+        run: npm run sb:build
       - name: screenshot test...
         run: npm run test:ui:ci
 
