overrides in package json

--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
       "chrome.iphone7": {
         "target": "chrome.docker",
         "preset": "iPhone 7"
+      },
+      "overrides": {
+        "chrome-remote-interface": "0.31.3"
       }
     }
   }
