--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-router-dom": "^6.2.1"
   },
   "loki": {
+    "diffingEngine": "pixelmatch",
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.app",
