--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --env port=3000",
+    "dev": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "build": "webpack",
@@ -13,7 +13,7 @@
     "test:ui":"npx loki test",
     "test:ui:ok":"npx loki approve",
 
-    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "sb": "storybook dev -p 6006 -c ./config/storybook",
     "sb:build": "storybook build -c ./config/storybook",
     "loki:upd": "loki update --reactUri file:./storybook-static",
     "test:ui:ci":"storybook build -c ./config/storybook && loki --requireReference --reactUri file:./storybook-static"
