--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "build:dev": "webpack --env mode=development",
     "build": "webpack",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
-    "test:ui":"npx loki test",
-    "test:ui:ok":"npx loki approve",
-
+    "test:ui": "npx loki test",
+    "test:ui:ok": "npx loki approve",
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:html" : "reg-cli --from .loki/report.json --report .loki/report.html",
+    "test:ui:report" : "npm run test:ui:json && npm run test:ui:html",
     "sb": "storybook dev -p 6006 -c ./config/storybook",
     "sb:build": "storybook build -c ./config/storybook",
     "loki:upd": "loki update --reactUri file:./storybook-static",
-    "test:ui:ci":"storybook build -c ./config/storybook && loki --requireReference --reactUri file:./storybook-static"
+    "test:ui:ci": "storybook build -c ./config/storybook && loki --requireReference --reactUri file:./storybook-static"
   },
   "keywords": [],
   "author": "",
@@ -53,6 +55,7 @@
     "jest": "^27.5.1",
     "loki": "^0.33.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "reg-cli": "^0.17.7",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook": "^7.6.7",
