--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
-    "test:ui:html" : "reg-cli --from .loki/report.json --report .loki/report.html",
-    "test:ui:report" : "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
+    "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "sb": "storybook dev -p 6006 -c ./config/storybook",
     "sb:build": "storybook build -c ./config/storybook",
     "loki:upd": "loki update --reactUri file:./storybook-static",
@@ -49,6 +49,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.6.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
