--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-react": "^7.16.7",
@@ -55,6 +54,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "json-server": "^0.17.0",
     "loki": "^0.33.1",
     "mini-css-extract-plugin": "^2.5.3",
     "reg-cli": "^0.17.7",
